traces/bug_542.txt
examples++-hpddm/hpddm_substructuring.cpp:596: error: DEAD_STORE
  The value written to &zs (type char) is never used.
Showing all 1 steps of the trace


examples++-hpddm/hpddm_substructuring.cpp:596:5: Write of unused value
594.       const char ds = 'S';
595.   #endif
596.       const char zs = 'G';
           ^
597.       Substructuring::add<HpBdd, double, ds>();
598.       zzzfff->Add("dbdd", atype<HpBdd<double, ds>*>());
